--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "off"
+    
     }
 }
