--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
