--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-input-mask": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-input-mask": "^2.0.4",
     "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1"
